# aubo-ros2-projects

./: .gitignore  CMakeLists.txt  package.xml
launch/: tcp_pose_publisher.launch.py
scripts/: tcp_pose_publisher.py
