<?xml version="1.0"?>
<package format="2">
  <name>aubo_ros2_projects</name>
  <version>0.0.0</version>
  <description>AUBO robot arm control examples using various ROS2 interfaces</description>

  <maintainer email="chenhsin.chiang4@gmail.com">nayr</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- ROS2 core -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <!-- Messages / interfaces -->
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>

  <!-- AUBO-specific interfaces -->
  <depend>aubo_msgs</depend>
  <depend>aubo_dashboard_msgs</depend>

  <!-- MoveIt (for the MoveIt example) -->
  <depend>moveit_ros_planning_interface</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
